@@ -17,6 +17,7 @@
 - dont fail mount on access fail.
 - fix rpc fail on large export list.
 - fix memory leak on reload.
+- dont connect at ldap lookup module init.
 
 03/09/2009 autofs-5.0.5
 -----------------------
